// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a multiline textarea 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label text-bold"
      for="x"
    >
      Hello
    </label>
    <div
      class="usa-hint"
    />
    <textarea
      class="usa-textarea"
      id="x"
      name="x"
      rows="10"
      style="height: auto;"
    />
  </div>
</div>
`;

exports[`renders a text input 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label text-bold"
      for="x"
    >
      Hello
    </label>
    <div
      class="usa-hint"
    />
    <input
      class="usa-input"
      id="x"
      name="x"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders a text input with hint 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label text-bold"
      for="x"
    >
      Hello
    </label>
    <div
      class="usa-hint"
    >
      Additional text
    </div>
    <input
      class="usa-input"
      id="x"
      name="x"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`shows an error message 1`] = `
<div>
  <div
    class="usa-form-group usa-form-group--error"
  >
    <label
      class="usa-label text-bold"
      for="x"
    >
      Hello
    </label>
    <div
      class="usa-hint"
    >
      Also displays hint
    </div>
    <span
      class="usa-error-message"
      id="input-error-message"
      role="alert"
    >
      Something went wrong
    </span>
    <input
      class="usa-input"
      id="x"
      name="x"
      type="text"
      value=""
    />
  </div>
</div>
`;
